Palau SAROPS runs, fixes, and hardcodes

--- a/download_data.ipynb
+++ b/download_data.ipynb
@@ -168,26 +168,26 @@
     "    #   \"include_range_endpoints\": True,\n",
     "    #   \"generate_mask\": False\n",
     "    # },\n",
-    "    {\n",
-    "      \"name\": \"hurrhenri_hfrnet\",\n",
-    "      \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
-    "      \"code\": \"USEC_6KM_HOURLY\",\n",
-    "      \"time_range\": (\"2021-08-21T12:00\", \"2021-08-23T18:00\"),\n",
-    "      \"lat_range\": (38.162201, 41.520008),\n",
-    "      \"lon_range\": (284.290368, 290.276249),\n",
-    "      \"include_range_endpoints\": True,\n",
-    "      \"generate_mask\": False\n",
-    "    },\n",
     "    # {\n",
-    "    #   \"name\": \"hurrhenri_hycom\",\n",
-    "    #   \"datasrc\": \"THREDDS_HYCOM\",\n",
-    "    #   \"code\": \"GLOBAL_HINDCAST\",\n",
+    "    #   \"name\": \"hurrhenri_hfrnet\",\n",
+    "    #   \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
+    "    #   \"code\": \"USEC_6KM_HOURLY\",\n",
     "    #   \"time_range\": (\"2021-08-21T12:00\", \"2021-08-23T18:00\"),\n",
     "    #   \"lat_range\": (38.162201, 41.520008),\n",
     "    #   \"lon_range\": (284.290368, 290.276249),\n",
     "    #   \"include_range_endpoints\": True,\n",
     "    #   \"generate_mask\": False\n",
     "    # },\n",
+    "    {\n",
+    "      \"name\": \"hurrhenri_hycom\",\n",
+    "      \"datasrc\": \"THREDDS_HYCOM\",\n",
+    "      \"code\": \"GLOBAL_HINDCAST\",\n",
+    "      \"time_range\": (\"2021-08-21T12:00\", \"2021-08-23T18:00\"),\n",
+    "      \"lat_range\": (38.162201, 41.520008),\n",
+    "      \"lon_range\": (284.290368, 290.276249),\n",
+    "      \"include_range_endpoints\": True,\n",
+    "      \"generate_mask\": False\n",
+    "    },\n",
     "]\n",
     "\n",
     "\n",
