--- a/simulation_runner.ipynb
+++ b/simulation_runner.ipynb
@@ -50,10 +50,13 @@
     "    # \"tijuana_2020-03_overland.json\",\n",
     "    # \"tijuana_2020-03_slipmask.json\",\n",
     "    # \"tijuana_2020-03_alongshore.yaml\",\n",
-    "    \"tijuana_hurrkay_alongshore.yaml\",\n",
+    "    # \"tijuana_hurrkay_alongshore.yaml\",\n",
     "    # \"tijuana_hurrkay_oi_alongshore.yaml\"\n",
     "    # \"ny_hurrhenri_hfrnet.yaml\",\n",
-    "    # \"ny_hurrhenri_hycom.yaml\"\n",
+    "    # \"ny_hurrhenri_hycom.yaml\",\n",
+    "    \"palau-sarop-2023-03-hycom.yaml\",\n",
+    "    \"palau-sarop-2023-03-cmems.yaml\",\n",
+    "    # \"palau-sarop-2023-03-hfr-combined.yaml\",\n",
     "]"
    ]
   },
@@ -135,7 +138,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.10 ('py3-parcels')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
