Update general data loading (guessing data var names), also update config ocean data format

--- a/compare_densities.ipynb
+++ b/compare_densities.ipynb
@@ -23,6 +23,7 @@
     "import numpy as np\n",
     "\n",
     "from pyplume import utils, plotting, constants\n",
+    "from pyplume.dataloaders import load_geo_points\n",
     "from pyplume.postprocess import ParticleResult"
    ]
   },
@@ -41,7 +42,7 @@
     "}\n",
     "to_compare = [\"Henri HFR\", \"Henri HYCOM\"]\n",
     "# to_compare = [\"Kay HFR\", \"Kay OI\"]\n",
-    "coast_lats, coast_lons = utils.load_geo_points(\"data/coastOR2Mex_tijuana.mat\")\n",
+    "coast_lats, coast_lons = load_geo_points(\"data/coastOR2Mex_tijuana.mat\")\n",
     "\n",
     "# domain = constants.TIJUANA_RIVER_DOMAIN\n",
     "domain = {\n",
