--- a/generate_alongshore_currents.ipynb
+++ b/generate_alongshore_currents.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "from pyplume.constants import DATA_DIR, FIELD_NETCDF_DIR\n",
     "import pyplume.utils as utils\n",
-    "from pyplume.dataloaders import dataset_to_fieldset, SurfaceGrid\n",
+    "from pyplume.dataloaders import dataset_to_fieldset, SurfaceGrid, load_geo_points\n",
     "from pyplume.thredds_data import rename_dataset_vars"
    ]
   },
@@ -286,8 +286,8 @@
     "fig = plt.figure(figsize=(10, 10))\n",
     "ax = fig.add_subplot(111, projection=ccrs.PlateCarree())\n",
     "ax.scatter(othermgrid[1].flatten()[where_quiver], othermgrid[0].flatten()[where_quiver], s=10, edgecolor=\"k\")\n",
-    "# coast_lats, coast_lons = utils.load_geo_points(\"data/coastOR2Mex_tijuana.mat\")\n",
-    "coast_lats, coast_lons = utils.load_geo_points(\"data/socal_boundary.mat\")\n",
+    "# coast_lats, coast_lons = load_geo_points(\"data/coastOR2Mex_tijuana.mat\")\n",
+    "coast_lats, coast_lons = load_geo_points(\"data/socal_boundary.mat\")\n",
     "plotting.plot_coastline(coast_lats, coast_lons, ax=ax, linewidth=0.7)\n",
     "# ax.add_feature(cartopy.feature.COASTLINE)\n",
     "ax.add_feature(cartopy.feature.LAND, facecolor=\"#fffef7\")\n",
