--- a/load_wind.ipynb
+++ b/load_wind.ipynb
@@ -66,6 +66,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a2923829",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df[\"time\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f31ab685",
    "metadata": {
     "ExecuteTime": {
