--- a/simulation_runner.ipynb
+++ b/simulation_runner.ipynb
@@ -47,15 +47,10 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    # \"tijuana_2020-03_overland.json\",\n",
-    "    # \"tijuana_2020-03_slipmask.json\",\n",
-    "    # \"tijuana_2020-03_alongshore.yaml\",\n",
-    "    # \"tijuana_hurrkay_alongshore.yaml\",\n",
-    "    # \"tijuana_hurrkay_oi_alongshore.yaml\"\n",
-    "    # \"ny_hurrhenri_hfrnet.yaml\",\n",
-    "    # \"ny_hurrhenri_hycom.yaml\",\n",
-    "    \"palau-sarop-2023-03-hycom.yaml\",\n",
-    "    \"palau-sarop-2023-03-cmems.yaml\",\n",
+    "    \"huntington_all.yaml\",\n",
+    "    \"ny_hurrhenri.yaml\",\n",
+    "    \"tijuana_hurrkay.yaml\",\n",
+    "    \"palau-sarop-2023-03.yaml\",\n",
     "    # \"palau-sarop-2023-03-hfr-combined.yaml\",\n",
     "]"
    ]
@@ -70,8 +65,11 @@
    "source": [
     "loaded_configs = [load_config(CONFIGS_DIR / path) for path in configs]\n",
     "sims = []\n",
+    "configs_copied = []\n",
     "for cfg in loaded_configs:\n",
-    "    sims.append(prep_sim_from_cfg(cfg))"
+    "    prepped = prep_sim_from_cfg(cfg)\n",
+    "    sims.extend(prepped)\n",
+    "    configs_copied.extend([cfg for _ in range(len(prepped))])"
    ]
   },
   {
@@ -131,7 +129,7 @@
    },
    "outputs": [],
    "source": [
-    "for cfg, sim in zip(loaded_configs, sims):\n",
+    "for cfg, sim in zip(configs_copied, sims):\n",
     "    process_results(sim, cfg)"
    ]
   }
