Remove DataSource class, format files

--- a/download_data.ipynb
+++ b/download_data.ipynb
@@ -33,8 +33,7 @@
     "\n",
     "from pyplume.constants import FIELD_NETCDF_DIR\n",
     "from pyplume.dataloaders import slice_dataset, dataset_to_fieldset\n",
-    "from pyplume import utils\n",
-    "from pyplume.thredds_data import retrieve_dataset, retrieve_dataloader"
+    "from pyplume import utils"
    ]
   },
   {
