--- a/generate_alongshore_currents.ipynb
+++ b/generate_alongshore_currents.ipynb
@@ -40,8 +40,7 @@
     "\n",
     "from pyplume.constants import DATA_DIR, FIELD_NETCDF_DIR\n",
     "import pyplume.utils as utils\n",
-    "from pyplume.dataloaders import dataset_to_fieldset, SurfaceGrid, load_geo_points\n",
-    "from pyplume.thredds_data import rename_dataset_vars"
+    "from pyplume.dataloaders import dataset_to_fieldset, SurfaceGrid, load_geo_points"
    ]
   },
   {
