--- a/simulation_runner.ipynb
+++ b/simulation_runner.ipynb
@@ -47,9 +47,9 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    \"huntington_all.yaml\",\n",
-    "    \"ny_hurrhenri.yaml\",\n",
-    "    \"tijuana_hurrkay.yaml\",\n",
+    "    # \"huntington_all.yaml\",\n",
+    "    # \"ny_hurrhenri.yaml\",\n",
+    "    # \"tijuana_hurrkay.yaml\",\n",
     "    \"palau-sarop-2023-03.yaml\",\n",
     "]"
    ]
