Completely replace plot_features with resultplots

--- a/download_data.ipynb
+++ b/download_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,47 +22,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import copy\n",
     "import os\n",
     "import time\n",
+    "\n",
     "import numpy as np\n",
     "import xarray as xr\n",
     "\n",
     "from pyplume.constants import FIELD_NETCDF_DIR\n",
-    "from pyplume.dataloaders import slice_dataset, dataset_to_fieldset\n",
-    "from pyplume import utils"
+    "from pyplume import dataloaders, utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_latest_span(delta):\n",
     "    # GMT, data recorded hourly\n",
     "    time_now = np.datetime64(\"now\", \"h\")\n",
-    "    return (time_now - delta, time_now)\n",
-    "\n",
-    "def get_regs_year(year, name, lat_rng, lon_rng):\n",
-    "    regions = []\n",
-    "    months = np.arange(str(year), str(year + 1), dtype=\"datetime64[M]\")\n",
-    "    for m in months:\n",
-    "        days = np.arange(m, m + np.timedelta64(1, \"M\"), dtype=\"datetime64[D]\")\n",
-    "        timerng = (np.datetime64(days[0], \"h\"), days[-1] + np.timedelta64(23, \"h\"))\n",
-    "        for code in (\"USWC_1KM_HOURLY\", \"USWC_2KM_HOURLY\", \"USWC_6KM_HOURLY\"):\n",
-    "            regions.append({\n",
-    "                \"name\": f\"{name}_{m}\",\n",
-    "                \"code\": code,\n",
-    "                \"time_range\": timerng,\n",
-    "                \"lat_range\": lat_rng,\n",
-    "                \"lon_range\": lon_rng,\n",
-    "                \"include_range_endpoints\": False if code == \"USWC_1KM_HOURLY\" else True\n",
-    "            })\n",
-    "    return regions"
+    "    return (time_now - delta, time_now)"
    ]
   },
   {
@@ -93,110 +77,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tuple reference\n",
-    "# (name, region code, time range, lat range, lon range, include domain endpoints)\n",
     "region_data = [\n",
     "    # {\n",
-    "    #     \"name\": \"tj_sample\",\n",
-    "    #     \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
-    "    #     \"code\": \"USWC_1KM_HOURLY\",\n",
-    "    #     \"time_range\": (\"2019-01-01T00\", \"2021-01-01T00\", 300),\n",
-    "    #     \"lat_range\": (32.11093, 32.73124),\n",
-    "    #     \"lon_range\": (-117.565, -116.9924),\n",
-    "    #     \"include_range_endpoints\": False\n",
-    "    # },\n",
-    "    # {\n",
-    "    #     \"name\": \"hunington_latest\",\n",
-    "    #     \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
-    "    #     \"code\": \"USWC_6KM_HOURLY\",\n",
-    "    #     \"time_range\": (\"2021-10-01T00\", \"2021-10-10T00\"),\n",
-    "    #     \"lat_range\": (32, 34.2),\n",
-    "    #     \"lon_range\": (-119, -117.4),\n",
-    "    #     \"include_range_endpoints\": True\n",
-    "    # },\n",
-    "    # {\n",
-    "    #     \"name\": \"tj_plume_1km_2020-03\",\n",
-    "    #     \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
-    "    #     \"code\": \"USWC_1KM_HOURLY\",\n",
-    "    #     \"time_range\": (\"2020-03-09T01:00\", \"2020-03-14T01:00\"),\n",
-    "    #     \"lat_range\": (32.11093, 32.73124),\n",
-    "    #     \"lon_range\": (-117.565, -116.9924),\n",
-    "    #     \"include_range_endpoints\": True,\n",
-    "    #     \"generate_mask\": True\n",
-    "    # },\n",
-    "    # {\n",
-    "    #   \"name\": \"hycom_mwbproj\",\n",
-    "    #   \"datasrc\": \"THREDDS_HYCOM\",\n",
-    "    #   \"code\": \"FMRC_HYCOM\",\n",
-    "    #   \"time_range\": (np.datetime64(\"now\") - np.timedelta64(1, \"D\"), np.datetime64(\"now\") + np.timedelta64(7, \"D\")),\n",
-    "    #   \"lat_range\": (22, 45),\n",
-    "    #   \"lon_range\": (273, 295),\n",
-    "    #   \"include_range_endpoints\": False\n",
-    "    # },\n",
-    "    # {\n",
-    "    #   \"name\": \"tj_plume_1km_2022-09\",\n",
-    "    #   \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
-    "    #   \"code\": \"USWC_1KM_HOURLY\",\n",
-    "    #   \"time_range\": (\"2022-09-01T00:00\", \"2022-09-30T23:00\"),\n",
-    "    #   \"lat_range\": (32.11093, 32.73124),\n",
-    "    #   \"lon_range\": (-117.565, -116.9924),\n",
-    "    #   \"include_range_endpoints\": True,\n",
-    "    #   \"generate_mask\": True\n",
-    "    # },\n",
-    "    # {\n",
-    "    #   \"name\": \"tj_plume_2km_2022-09\",\n",
-    "    #   \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
-    "    #   \"code\": \"USWC_2KM_HOURLY\",\n",
-    "    #   \"time_range\": (\"2022-09-01T00:00\", \"2022-09-30T23:00\"),\n",
-    "    #   \"lat_range\": (32.11093, 32.73124),\n",
-    "    #   \"lon_range\": (-117.565, -116.9924),\n",
-    "    #   \"include_range_endpoints\": True,\n",
-    "    #   \"generate_mask\": False\n",
-    "    # },\n",
-    "    # {\n",
-    "    #   \"name\": \"tj_plume_6km_2022-09\",\n",
-    "    #   \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
-    "    #   \"code\": \"USWC_6KM_HOURLY\",\n",
-    "    #   \"time_range\": (\"2022-09-01T00:00\", \"2022-09-30T23:00\"),\n",
-    "    #   \"lat_range\": (32.11093, 32.73124),\n",
-    "    #   \"lon_range\": (-117.565, -116.9924),\n",
-    "    #   \"include_range_endpoints\": True,\n",
-    "    #   \"generate_mask\": False\n",
-    "    # },\n",
-    "    # {\n",
-    "    #   \"name\": \"hurrhenri_hfrnet\",\n",
-    "    #   \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
-    "    #   \"code\": \"USEC_6KM_HOURLY\",\n",
-    "    #   \"time_range\": (\"2021-08-21T12:00\", \"2021-08-23T18:00\"),\n",
-    "    #   \"lat_range\": (38.162201, 41.520008),\n",
-    "    #   \"lon_range\": (284.290368, 290.276249),\n",
-    "    #   \"include_range_endpoints\": True,\n",
-    "    #   \"generate_mask\": False\n",
+    "    #     \"name\": \"hurrhenri_hycom\",\n",
+    "    #     \"url\": \"https://tds.hycom.org/thredds/dodsC/GLBy0.08/expt_93.0/uv3z\",\n",
+    "    #     \"time_range\": (\"2021-08-21T12:00\", \"2021-08-23T18:00\"),\n",
+    "    #     \"lat_range\": (38.162201, 41.520008),\n",
+    "    #     \"lon_range\": (284.290368, 290.276249),\n",
+    "    #     \"inclusive\": True,\n",
+    "    #     \"u_key\": \"water_u\",\n",
+    "    #     \"v_key\": \"water_v\",\n",
+    "    #     \"drop_vars\": [\"tau\"]\n",
     "    # },\n",
     "    {\n",
-    "      \"name\": \"hurrhenri_hycom\",\n",
-    "      \"datasrc\": \"THREDDS_HYCOM\",\n",
-    "      \"code\": \"GLOBAL_HINDCAST\",\n",
-    "      \"time_range\": (\"2021-08-21T12:00\", \"2021-08-23T18:00\"),\n",
-    "      \"lat_range\": (38.162201, 41.520008),\n",
-    "      \"lon_range\": (284.290368, 290.276249),\n",
-    "      \"include_range_endpoints\": True,\n",
-    "      \"generate_mask\": False\n",
+    "        \"name\": \"hurrkay_2km\",\n",
+    "        \"url\": \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/2km/hourly/RTV/HFRADAR_US_West_Coast_2km_Resolution_Hourly_RTV_best.ncd\",\n",
+    "        \"time_range\": [\"2022-09-08T06:00\", \"2022-09-12T00:00\"],\n",
+    "        \"lat_range\": (32.11093, 32.73124),\n",
+    "        \"lon_range\": (-118.565, -115.9924),\n",
+    "        \"inclusive\": True,\n",
     "    },\n",
-    "]\n",
-    "\n",
-    "\n",
-    "# for rd in get_regs_year(2020, \"tj_plume\", (32.11093, 32.73124), (-117.565, -116.9924)):\n",
-    "#     region_data.append(rd)"
+    "    {\n",
+    "        \"name\": \"hurrkay_6km\",\n",
+    "        \"url\": \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/6km/hourly/RTV/HFRADAR_US_West_Coast_6km_Resolution_Hourly_RTV_best.ncd\",\n",
+    "        \"time_range\": [\"2022-09-08T06:00\", \"2022-09-12T00:00\"],\n",
+    "        \"lat_range\": (32.11093, 32.73124),\n",
+    "        \"lon_range\": (-118.565, -115.9924),\n",
+    "        \"inclusive\": True,\n",
+    "    },\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -205,14 +123,11 @@
     "save_dir = utils.get_dir(FIELD_NETCDF_DIR)\n",
     "regions = []\n",
     "for rd in region_data:\n",
-    "    print(rd)\n",
-    "    with retrieve_dataloader(\n",
-    "        rd[\"datasrc\"], rd[\"code\"], time_range=rd[\"time_range\"], lat_range=rd[\"lat_range\"],\n",
-    "        lon_range=rd[\"lon_range\"], inclusive=rd[\"include_range_endpoints\"]\n",
-    "    ) as dl:\n",
-    "        dl.save(save_dir / f\"{rd['name']}.nc\")\n",
-    "        if rd.get(\"generate_mask\", False):\n",
-    "            dl.save_mask(save_dir / f\"{rd['name']}_mask.npy\", num_samples=50)"
+    "    rd = copy.deepcopy(rd)\n",
+    "    name = rd.pop(\"name\")\n",
+    "    url = rd.pop(\"url\")\n",
+    "    with dataloaders.DataLoader(url, **rd) as dl:\n",
+    "        dl.save(save_dir / f\"{name}.nc\")"
    ]
   }
  ],
