--- a/simulation_runner.ipynb
+++ b/simulation_runner.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -32,6 +33,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,8 +50,8 @@
    "source": [
     "configs = [\n",
     "    # \"huntington_all.yaml\",\n",
-    "    # \"ny_hurrhenri.yaml\",\n",
-    "    # \"tijuana_hurrkay.yaml\",\n",
+    "    \"ny_hurrhenri.yaml\",\n",
+    "    \"tijuana_hurrkay.yaml\",\n",
     "    \"palau-sarop-2023-03.yaml\",\n",
     "]"
    ]
@@ -79,10 +81,12 @@
    },
    "outputs": [],
    "source": [
-    "[sim.pset.show(field=\"vector\") for sim in sims]"
+    "for sim in sims:\n",
+    "    sim.pset.show(field=\"vector\")   "
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -90,6 +94,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -109,14 +114,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### plot and gif generation\n",
-    "\n",
-    "gif generation requires [magick](https://imagemagick.org/index.php)\n",
-    "\n",
-    "if it doesn't work just comment out the gif generation line"
+    "### plot and gif generation"
    ]
   },
   {
@@ -149,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
