Fix Advection alongshore bug, clean up sim execution, add tqdm

--- a/simulation_runner.ipynb
+++ b/simulation_runner.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    # \"huntington_all.yaml\",\n",
+    "    \"huntington_all.yaml\",\n",
     "    \"ny_hurrhenri.yaml\",\n",
     "    \"tijuana_hurrkay.yaml\",\n",
     "    \"palau-sarop-2023-03.yaml\",\n",
