Remove unused imports from most source files

--- a/simulation_runner.ipynb
+++ b/simulation_runner.ipynb
@@ -28,7 +28,6 @@
    "outputs": [],
    "source": [
     "from pyplume.constants import CONFIGS_DIR\n",
-    "from pyplume import utils\n",
     "from pyplume.config_parser import load_config, prep_sim_from_cfg, process_results"
    ]
   },
@@ -52,7 +51,7 @@
     "    # \"huntington_all.yaml\",\n",
     "    # \"ny_hurrhenri.yaml\",\n",
     "    # \"tijuana_hurrkay.yaml\",\n",
-    "    # \"palau-sarop-2023-03.yaml\",\n",
+    "    \"palau-sarop-2023-03.yaml\",\n",
     "    \"tijuana_example.yaml\",\n",
     "]"
    ]
