Format files+notebooks, some more comments

--- a/compare_cfgs.ipynb
+++ b/compare_cfgs.ipynb
@@ -17,25 +17,21 @@
    "outputs": [],
    "source": [
     "base_cfg_path = \"plume_track.json\"\n",
-    "set_spawn = [32.5465163705279,-117.136650202502]\n",
+    "set_spawn = [32.5465163705279, -117.136650202502]\n",
     "\n",
     "replacements = [\n",
     "    {\n",
     "        \"name\": \"plume_track_freeslip\",\n",
-    "        \"parcels_config\": {\n",
-    "            \"spawn_points\": [[32.555, -117.15]]\n",
-    "        }\n",
+    "        \"parcels_config\": {\"spawn_points\": [[32.555, -117.15]]},\n",
     "    },\n",
     "    {\n",
     "        \"name\": \"plume_track_alongshore\",\n",
-    "        \"netcdf_data\": {\n",
-    "            \"alongshore\": \"data/field_netcdfs/tijuana_alongshore.nc\"\n",
-    "        },\n",
+    "        \"netcdf_data\": {\"alongshore\": \"data/field_netcdfs/tijuana_alongshore.nc\"},\n",
     "        \"parcels_config\": {\n",
     "            \"kernels\": [\"AdvectionRK4BorderCheck\", \"AgeParticle\", \"RandomWalk\"],\n",
-    "            \"spawn_points\": [[32.555, -117.15]]\n",
-    "        }\n",
-    "    }\n",
+    "            \"spawn_points\": [[32.555, -117.15]],\n",
+    "        },\n",
+    "    },\n",
     "]"
    ]
   },
@@ -47,6 +43,7 @@
    "source": [
     "import copy\n",
     "\n",
+    "\n",
     "def _replace_data(cfg, replacement):\n",
     "    \"\"\"Modifies in-place\"\"\"\n",
     "    for key in replacement:\n",
@@ -57,10 +54,12 @@
     "        else:\n",
     "            cfg[key] = replacement[key]\n",
     "\n",
+    "\n",
     "def replace_config_data(cfg, replacement):\n",
     "    cfg_copy = copy.deepcopy(cfg)\n",
     "    _replace_data(cfg_copy, replacement)\n",
     "    return cfg_copy\n",
+    "\n",
     "\n",
     "base_cfg = utils.load_config(utils.PARCELS_CONFIGS_DIR / base_cfg_path)\n",
     "cfgs = [replace_config_data(base_cfg, replacement) for replacement in replacements]"
@@ -103,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pr.plot_at_t(1, domain={\"S\":32.5,\"N\":32.6,\"W\":-117.2,\"E\":-117.1})"
+    "pr.plot_at_t(1, domain={\"S\": 32.5, \"N\": 32.6, \"W\": -117.2, \"E\": -117.1})"
    ]
   },
   {
@@ -139,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.array([1,2,3])"
+    "x = np.array([1, 2, 3])"
    ]
   },
   {
