--- a/dummy_data.ipynb
+++ b/dummy_data.ipynb
@@ -64,6 +64,7 @@
    "outputs": [],
    "source": [
     "import random\n",
+    "\n",
     "# vertical coastline\n",
     "coast_lon = -117.16\n",
     "coast_lats = [lat_bottom]\n",
@@ -107,13 +108,9 @@
     "ds = xr.Dataset(\n",
     "    data_vars={\n",
     "        \"U\": ([\"time\", \"lat\", \"lon\"], u_all),\n",
-    "        \"V\": ([\"time\", \"lat\", \"lon\"], v_all)\n",
+    "        \"V\": ([\"time\", \"lat\", \"lon\"], v_all),\n",
     "    },\n",
-    "    coords={\n",
-    "        \"time\": times,\n",
-    "        \"lat\": lats,\n",
-    "        \"lon\": lons\n",
-    "    }\n",
+    "    coords={\"time\": times, \"lat\": lats, \"lon\": lons},\n",
     ")\n",
     "ds.to_netcdf(\"data/field_netcdfs/dummy_field.nc\")"
    ]
