--- a/fieldset_compare.ipynb
+++ b/fieldset_compare.ipynb
@@ -36,7 +36,14 @@
     "import xarray as xr\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from parcels import FieldSet, ParticleSet, JITParticle, AdvectionRK4, ErrorCode, ParticleFile\n",
+    "from parcels import (\n",
+    "    FieldSet,\n",
+    "    ParticleSet,\n",
+    "    JITParticle,\n",
+    "    AdvectionRK4,\n",
+    "    ErrorCode,\n",
+    "    ParticleFile,\n",
+    ")\n",
     "import scipy.spatial\n",
     "\n",
     "import pyplume.utils as utils\n",
@@ -53,7 +60,7 @@
    "source": [
     "filenames = [\n",
     "    FIELD_NETCDF_DIR / \"tj_plume_1km_2022-09.nc\",\n",
-    "    FIELD_NETCDF_DIR / \"oi_fields/Tot_SDLJ_202209.nc\"\n",
+    "    FIELD_NETCDF_DIR / \"oi_fields/Tot_SDLJ_202209.nc\",\n",
     "]\n",
     "\n",
     "files = []\n",
@@ -62,12 +69,7 @@
     "    fs = dataset_to_fieldset(ds)\n",
     "    files.append({\"ds\": ds, \"fs\": fs})\n",
     "\n",
-    "domain = {\n",
-    "    \"S\": 32.525,\n",
-    "    \"N\": 32.7,\n",
-    "    \"W\": -117.27,\n",
-    "    \"E\": -117.09\n",
-    "}\n",
+    "domain = {\"S\": 32.525, \"N\": 32.7, \"W\": -117.27, \"E\": -117.09}\n",
     "\n",
     "# if lat and lon dimensions are the same, the stuff will run MUCH quicker\n",
     "dimensions_same = True"
@@ -94,6 +96,7 @@
     "for f in files:\n",
     "    f[\"latkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"ds\"][\"lat\"]]).T)\n",
     "    f[\"lonkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"ds\"][\"lon\"]]).T)\n",
+    "\n",
     "\n",
     "def get_nearest_index(ref, lat, lon):\n",
     "    return ref[\"latkdtree\"].query([lat])[1], ref[\"lonkdtree\"].query([lon])[1]"
@@ -128,8 +131,11 @@
     "        lat = files[0][\"ds\"][\"lat\"][i].values\n",
     "        lon = files[0][\"ds\"][\"lon\"][j].values\n",
     "        lat_ind, lon_ind = get_nearest_index(files[1], lat, lon)\n",
-    "    #     print(utils.haversine(lat, files[1][\"ds\"][\"lat\"].values[lat_ind], lon, files[1][\"ds\"][\"lon\"].values[lon_ind]))\n",
-    "        if abs(lat - files[1][\"ds\"][\"lat\"].values[lat_ind]) > 0.00903 or abs(lon - files[1][\"ds\"][\"lon\"].values[lon_ind]) > 0.0107:\n",
+    "        #     print(utils.haversine(lat, files[1][\"ds\"][\"lat\"].values[lat_ind], lon, files[1][\"ds\"][\"lon\"].values[lon_ind]))\n",
+    "        if (\n",
+    "            abs(lat - files[1][\"ds\"][\"lat\"].values[lat_ind]) > 0.00903\n",
+    "            or abs(lon - files[1][\"ds\"][\"lon\"].values[lon_ind]) > 0.0107\n",
+    "        ):\n",
     "            continue\n",
     "        v = files[0][\"ds\"][\"V\"].values[t, i, j]\n",
     "        u_other = files[1][\"ds\"][\"U\"].values[t_other, lat_ind, lon_ind]\n",
@@ -149,7 +155,9 @@
     "else:\n",
     "    # runs significantly quicker (please use this)\n",
     "    u_shape = files[0][\"ds\"][\"U\"].shape\n",
-    "    ang_diff = np.full((len(overlap_times), u_shape[1], u_shape[2]), np.nan, dtype=np.float32)\n",
+    "    ang_diff = np.full(\n",
+    "        (len(overlap_times), u_shape[1], u_shape[2]), np.nan, dtype=np.float32\n",
+    "    )\n",
     "    mag_diff = np.full(ang_diff.shape, np.nan, dtype=np.float32)\n",
     "    for i, time in enumerate(overlap_times):\n",
     "        vec_diff_dir = utils.get_dir(\"results/fs_comp_vectors\")\n",
@@ -157,9 +165,25 @@
     "        fig.patch.set_facecolor(\"w\")\n",
     "        fig.set_size_inches(12, 5)\n",
     "        fig.tight_layout()\n",
-    "        plot_vectorfield(files[0][\"ds\"], show_time=time, vmin=0, vmax=1, fig=fig, pos=121, titlestr=\"Thredds\")\n",
-    "        plot_vectorfield(files[1][\"ds\"], show_time=time, vmin=0, vmax=1, fig=fig, pos=122, titlestr=\"OI\")\n",
-    "        strtime = str(time.astype('datetime64[s]')).replace(\":\", \"-\")\n",
+    "        plot_vectorfield(\n",
+    "            files[0][\"ds\"],\n",
+    "            show_time=time,\n",
+    "            vmin=0,\n",
+    "            vmax=1,\n",
+    "            fig=fig,\n",
+    "            pos=121,\n",
+    "            titlestr=\"Thredds\",\n",
+    "        )\n",
+    "        plot_vectorfield(\n",
+    "            files[1][\"ds\"],\n",
+    "            show_time=time,\n",
+    "            vmin=0,\n",
+    "            vmax=1,\n",
+    "            fig=fig,\n",
+    "            pos=122,\n",
+    "            titlestr=\"OI\",\n",
+    "        )\n",
+    "        strtime = str(time.astype(\"datetime64[s]\")).replace(\":\", \"-\")\n",
     "        fig.savefig(vec_diff_dir / f\"field_comp_{strtime}.png\")\n",
     "        plt.close(fig)\n",
     "\n",
@@ -171,8 +195,8 @@
     "        u1 = files[1][\"ds\"][\"U\"].values[tidx1]\n",
     "        v1 = files[1][\"ds\"][\"V\"].values[tidx1]\n",
     "\n",
-    "        mag0 = np.sqrt(u0 ** 2 + v0 ** 2)\n",
-    "        mag1 = np.sqrt(u1 ** 2 + v1 ** 2)\n",
+    "        mag0 = np.sqrt(u0**2 + v0**2)\n",
+    "        mag1 = np.sqrt(u1**2 + v1**2)\n",
     "        dot_mag_rat = (u0 * u1 + v0 * v1) / (mag0 * mag1)\n",
     "        # rounding errors cause arccos to go out of domain\n",
     "        dot_mag_rat[np.where(dot_mag_rat > 1)] = 1\n",
@@ -250,7 +274,9 @@
     "\n",
     "fig, ax = get_carree_axis(domain)\n",
     "gl = get_carree_gl(ax)\n",
-    "plt.contourf(lon, lat, ang_means, np.linspace(0, np.nanmax(ang_means), 30), cmap='inferno')\n",
+    "plt.contourf(\n",
+    "    lon, lat, ang_means, np.linspace(0, np.nanmax(ang_means), 30), cmap=\"inferno\"\n",
+    ")\n",
     "plt.title(f\"Avg vector degree diff ({first_time})\")\n",
     "plt.colorbar()\n",
     "plt.savefig(deg_diff_dir / f\"heat_deg_{first_time}\")\n",
@@ -267,7 +293,9 @@
     "\n",
     "fig, ax = get_carree_axis(domain)\n",
     "gl = get_carree_gl(ax)\n",
-    "plt.contourf(lon, lat, mag_means, np.linspace(0, np.nanmax(mag_means), 20), cmap='inferno')\n",
+    "plt.contourf(\n",
+    "    lon, lat, mag_means, np.linspace(0, np.nanmax(mag_means), 20), cmap=\"inferno\"\n",
+    ")\n",
     "plt.title(f\"Avg magnitude diff (m/s) ({first_time})\")\n",
     "plt.colorbar()\n",
     "plt.savefig(deg_diff_dir / f\"heat_mag_{first_time}\")\n",
