--- a/generate_alongshore_currents.ipynb
+++ b/generate_alongshore_currents.ipynb
@@ -71,7 +71,9 @@
     "coast_lats, coast_lons = utils.load_pts_mat(coastline_mat)\n",
     "coast_segments = np.empty(len(coast_lats) - 1, dtype=object)\n",
     "for i in range(coast_segments.shape[0]):\n",
-    "    coast_segments[i] = LineString([[coast_lats[i], coast_lons[i]], [coast_lats[i + 1], coast_lons[i + 1]]])\n",
+    "    coast_segments[i] = LineString(\n",
+    "        [[coast_lats[i], coast_lons[i]], [coast_lats[i + 1], coast_lons[i + 1]]]\n",
+    "    )\n",
     "coastline = LineString(np.array([coast_lats, coast_lons]).T)"
    ]
   },
@@ -178,6 +180,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "plt.figure(figsize=(10, 10))\n",
     "plt.scatter(np.where(coast_vecs != None)[1], np.where(coast_vecs != None)[0], s=2)"
    ]
@@ -205,7 +208,7 @@
     "    list(map(lambda x: x[0], coast_vecs[coast_vecs_where])),\n",
     "    list(map(lambda x: x[1], coast_vecs[coast_vecs_where])),\n",
     "    width=0.001,\n",
-    "    pivot='mid'\n",
+    "    pivot=\"mid\",\n",
     ")"
    ]
   },
@@ -245,9 +248,13 @@
     "                closest_idx = kdtree.query([lats_grid[j], lons_grid[k]])[1]\n",
     "                closest_u = u[nonzero[0][closest_idx], nonzero[1][closest_idx]]\n",
     "                closest_v = v[nonzero[0][closest_idx], nonzero[1][closest_idx]]\n",
-    "                vec = coast_vecs[j, k]  # this order should be in u, v (it was diff lon, diff lat)\n",
+    "                vec = coast_vecs[\n",
+    "                    j, k\n",
+    "                ]  # this order should be in u, v (it was diff lon, diff lat)\n",
     "                # project u, v pair onto coastline vector\n",
-    "                scalar = (closest_u * vec[0] + closest_v * vec[1]) / (vec[0] ** 2 + vec[1] ** 2)\n",
+    "                scalar = (closest_u * vec[0] + closest_v * vec[1]) / (\n",
+    "                    vec[0] ** 2 + vec[1] ** 2\n",
+    "                )\n",
     "                coast_u[i, j, k] = scalar * vec[0]\n",
     "                coast_v[i, j, k] = scalar * vec[1]"
    ]
@@ -281,32 +288,26 @@
     "us = coast_u[idx].flatten()\n",
     "vs = coast_v[idx].flatten()\n",
     "where_quiver = ~np.isnan(us)\n",
-    "mags = np.sqrt(us ** 2 + vs ** 2)\n",
+    "mags = np.sqrt(us**2 + vs**2)\n",
     "fig = plt.figure(figsize=(10, 10))\n",
     "ax = fig.add_subplot(111, projection=ccrs.PlateCarree())\n",
-    "ax.scatter(othermgrid[1].flatten()[where_quiver], othermgrid[0].flatten()[where_quiver], s=10, edgecolor=\"k\")\n",
+    "ax.scatter(\n",
+    "    othermgrid[1].flatten()[where_quiver],\n",
+    "    othermgrid[0].flatten()[where_quiver],\n",
+    "    s=10,\n",
+    "    edgecolor=\"k\",\n",
+    ")\n",
     "# coast_lats, coast_lons = load_geo_points(\"data/coastOR2Mex_tijuana.mat\")\n",
     "coast_lats, coast_lons = load_geo_points(\"data/socal_boundary.mat\")\n",
     "plotting.plot_coastline(coast_lats, coast_lons, ax=ax, linewidth=0.7)\n",
     "# ax.add_feature(cartopy.feature.COASTLINE)\n",
     "ax.add_feature(cartopy.feature.LAND, facecolor=\"#fffef7\")\n",
     "ax.add_feature(cartopy.feature.OCEAN, facecolor=\"#dbf7ff\")\n",
-    "domain = {\n",
-    "    \"W\": -117.27,\n",
-    "    \"E\": -117.05,\n",
-    "    \"S\": 32.4,\n",
-    "    \"N\": 32.7\n",
-    "}\n",
+    "domain = {\"W\": -117.27, \"E\": -117.05, \"S\": 32.4, \"N\": 32.7}\n",
     "ext = [domain[\"W\"], domain[\"E\"], domain[\"S\"], domain[\"N\"]]\n",
     "ax.set_extent(ext, crs=ccrs.PlateCarree())\n",
     "quiv = ax.quiver(\n",
-    "    othermgrid[1].flatten(),\n",
-    "    othermgrid[0].flatten(),\n",
-    "    us,\n",
-    "    vs,\n",
-    "    mags,\n",
-    "    scale=4,\n",
-    "    width=0.004\n",
+    "    othermgrid[1].flatten(), othermgrid[0].flatten(), us, vs, mags, scale=4, width=0.004\n",
     ")\n",
     "plotting.get_carree_gl(ax)\n",
     "cbar = fig.colorbar(quiv, shrink=0.6)\n",
@@ -327,13 +328,9 @@
     "ds = xr.Dataset(\n",
     "    data_vars={\n",
     "        \"U\": ([\"time\", \"lat\", \"lon\"], coast_u),\n",
-    "        \"V\": ([\"time\", \"lat\", \"lon\"], coast_v)\n",
+    "        \"V\": ([\"time\", \"lat\", \"lon\"], coast_v),\n",
     "    },\n",
-    "    coords={\n",
-    "        \"time\": vel_ds[\"time\"],\n",
-    "        \"lat\": lats_grid,\n",
-    "        \"lon\": lons_grid\n",
-    "    }\n",
+    "    coords={\"time\": vel_ds[\"time\"], \"lat\": lats_grid, \"lon\": lons_grid},\n",
     ")"
    ]
   },
@@ -348,9 +345,13 @@
     "from parcels.tools.converters import GeographicPolar, Geographic\n",
     "from pyplume.dataloaders import dataset_to_fieldset\n",
     "\n",
-    "fu = Field.from_xarray(ds[\"U\"], \"CU\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\")\n",
+    "fu = Field.from_xarray(\n",
+    "    ds[\"U\"], \"CU\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\"\n",
+    ")\n",
     "fu.units = GeographicPolar()\n",
-    "fv = Field.from_xarray(ds[\"V\"], \"CV\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\")\n",
+    "fv = Field.from_xarray(\n",
+    "    ds[\"V\"], \"CV\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\"\n",
+    ")\n",
     "fv.units = Geographic()\n",
     "fuv = VectorField(\"CUV\", fu, fv)"
    ]
