--- a/plot_current_timeseries.ipynb
+++ b/plot_current_timeseries.ipynb
@@ -110,8 +110,12 @@
     "fig.set_size_inches(6, 7)\n",
     "for k, g in grids.items():\n",
     "    idx = g.get_closest_index(t=None, lat=pos[0], lon=pos[1])\n",
-    "    print(f\"found closest coordinate for {k} at {(g.dataset['lat'][idx[1]].values.item(), g.dataset['lon'][idx[2]].values.item())}\")\n",
-    "    sliced = g.dataset.isel(lat=idx[1], lon=idx[2]).sel(time=slice(timerng[0], timerng[1]))\n",
+    "    print(\n",
+    "        f\"found closest coordinate for {k} at {(g.dataset['lat'][idx[1]].values.item(), g.dataset['lon'][idx[2]].values.item())}\"\n",
+    "    )\n",
+    "    sliced = g.dataset.isel(lat=idx[1], lon=idx[2]).sel(\n",
+    "        time=slice(timerng[0], timerng[1])\n",
+    "    )\n",
     "    axs[0].plot(sliced[\"time\"], sliced[\"U\"], label=k)\n",
     "    axs[1].plot(sliced[\"time\"], sliced[\"V\"], label=k)\n",
     "for ax in axs:\n",
