--- a/plume_mat_fieldset_loader.ipynb
+++ b/plume_mat_fieldset_loader.ipynb
@@ -106,11 +106,7 @@
     "            \"U\": ([\"time\", \"lat\", \"lon\"], u_grid),\n",
     "            \"V\": ([\"time\", \"lat\", \"lon\"], v_grid),\n",
     "        },\n",
-    "        coords={\n",
-    "            \"time\": time,\n",
-    "            \"lat\": lats,\n",
-    "            \"lon\": lons\n",
-    "        }\n",
+    "        coords={\"time\": time, \"lat\": lats, \"lon\": lons},\n",
     "    )\n",
     "    return ds"
    ]
