--- a/slice_coastline_data.ipynb
+++ b/slice_coastline_data.ipynb
@@ -115,7 +115,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tijuana_idxs = np.array([3692, 3693, 3694, 3695, 3696, 3697, 3698, 3699, 3700, 3701, 3702, 3703, 3704, 3705, 3706, 3707, 3708, 3709, 3710, 3711, 3712, 3713, 3714, 3715, 3716, 3717, 3718, 3719, 3720, 3721, 3722, 3723, 3724, 3725, 3726, 3727, 3728, 3729, 4767])"
+    "tijuana_idxs = np.array(\n",
+    "    [\n",
+    "        3692,\n",
+    "        3693,\n",
+    "        3694,\n",
+    "        3695,\n",
+    "        3696,\n",
+    "        3697,\n",
+    "        3698,\n",
+    "        3699,\n",
+    "        3700,\n",
+    "        3701,\n",
+    "        3702,\n",
+    "        3703,\n",
+    "        3704,\n",
+    "        3705,\n",
+    "        3706,\n",
+    "        3707,\n",
+    "        3708,\n",
+    "        3709,\n",
+    "        3710,\n",
+    "        3711,\n",
+    "        3712,\n",
+    "        3713,\n",
+    "        3714,\n",
+    "        3715,\n",
+    "        3716,\n",
+    "        3717,\n",
+    "        3718,\n",
+    "        3719,\n",
+    "        3720,\n",
+    "        3721,\n",
+    "        3722,\n",
+    "        3723,\n",
+    "        3724,\n",
+    "        3725,\n",
+    "        3726,\n",
+    "        3727,\n",
+    "        3728,\n",
+    "        3729,\n",
+    "        4767,\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
