--- a/compare_densities.ipynb
+++ b/compare_densities.ipynb
@@ -45,12 +45,7 @@
     "coast_lats, coast_lons = load_geo_points(\"data/coastOR2Mex_tijuana.mat\")\n",
     "\n",
     "# domain = constants.TIJUANA_RIVER_DOMAIN\n",
-    "domain = {\n",
-    "    \"S\": 40.2,\n",
-    "    \"N\": 40.7,\n",
-    "    \"W\": -74.1,\n",
-    "    \"E\": -73.2\n",
-    "}\n",
+    "domain = {\"S\": 40.2, \"N\": 40.7, \"W\": -74.1, \"E\": -73.2}\n",
     "# domain = {\n",
     "#     \"S\": 38.5,\n",
     "#     \"N\": 39.2,\n",
@@ -77,7 +72,9 @@
     "    tstamps = tstamps[~np.isnan(tstamps)]\n",
     "    common_timestamps = np.sort(np.unique(tstamps))\n",
     "else:\n",
-    "    common_timestamps = reduce(np.intersect1d, list(map(lambda x: results[x].data_vars[\"time\"], to_compare)))"
+    "    common_timestamps = reduce(\n",
+    "        np.intersect1d, list(map(lambda x: results[x].data_vars[\"time\"], to_compare))\n",
+    "    )"
    ]
   },
   {
@@ -89,13 +86,29 @@
     "for i, t in enumerate(common_timestamps):\n",
     "    lats1, lons1 = results[to_compare[0]].get_positions_time(t, query=\"before\")\n",
     "    lats2, lons2 = results[to_compare[1]].get_positions_time(t, query=\"before\")\n",
-    "    fig, (ax1, ax2) = plotting.carree_subplots((1,2), domain=domain)\n",
-    "    plotting.plot_particle_density(lats1, lons1, bins=100, ax=ax1, pmax=1, title=f\"{to_compare[0]} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
+    "    fig, (ax1, ax2) = plotting.carree_subplots((1, 2), domain=domain)\n",
+    "    plotting.plot_particle_density(\n",
+    "        lats1,\n",
+    "        lons1,\n",
+    "        bins=100,\n",
+    "        ax=ax1,\n",
+    "        pmax=1,\n",
+    "        title=f\"{to_compare[0]} cumulative density at\\n{t.astype('datetime64[s]')}\",\n",
+    "    )\n",
     "    # plotting.plot_coastline(coast_lats, coast_lons, ax=ax1, c=\"k\")\n",
-    "    plotting.plot_particle_density(lats2, lons2, bins=100, ax=ax2, pmax=1, title=f\"{to_compare[1]} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
+    "    plotting.plot_particle_density(\n",
+    "        lats2,\n",
+    "        lons2,\n",
+    "        bins=100,\n",
+    "        ax=ax2,\n",
+    "        pmax=1,\n",
+    "        title=f\"{to_compare[1]} cumulative density at\\n{t.astype('datetime64[s]')}\",\n",
+    "    )\n",
     "    # plotting.plot_coastline(coast_lats, coast_lons, ax=ax2, c=\"k\")\n",
     "    strnum = str(i).zfill(3)\n",
-    "    plotting.draw_plt(savefile=res_path / f\"plot_{strnum}\", fig=fig, fit=True, figsize=(12, 6))"
+    "    plotting.draw_plt(\n",
+    "        savefile=res_path / f\"plot_{strnum}\", fig=fig, fit=True, figsize=(12, 6)\n",
+    "    )"
    ]
   },
   {
@@ -108,13 +121,28 @@
     "\n",
     "t = common_timestamps[-1]\n",
     "for i, name in enumerate(to_compare):\n",
-    "    starts = np.unique(np.array([results[name].ds[\"lat\"][:, 0], results[name].ds[\"lon\"][:, 0]]).T, axis=0).T\n",
+    "    starts = np.unique(\n",
+    "        np.array([results[name].ds[\"lat\"][:, 0], results[name].ds[\"lon\"][:, 0]]).T,\n",
+    "        axis=0,\n",
+    "    ).T\n",
     "    lats, lons = results[name].get_positions_time(t, query=\"before\")\n",
-    "    fig, ax = plotting.carree_subplots((1,1), domain=domain, land=True)\n",
-    "    plotting.plot_particle_density(lats, lons, bins=50, ax=ax, pmax=0.76, title=f\"{name} cumulative density at\\n{t.astype('datetime64[s]')}\")\n",
+    "    fig, ax = plotting.carree_subplots((1, 1), domain=domain, land=True)\n",
+    "    plotting.plot_particle_density(\n",
+    "        lats,\n",
+    "        lons,\n",
+    "        bins=50,\n",
+    "        ax=ax,\n",
+    "        pmax=0.76,\n",
+    "        title=f\"{name} cumulative density at\\n{t.astype('datetime64[s]')}\",\n",
+    "    )\n",
     "    # plotting.plot_coastline(coast_lats, coast_lons, ax=ax, c=\"k\")\n",
     "    ax.scatter(starts[1], starts[0], marker=\"x\", c=\"r\")\n",
-    "    plotting.draw_plt(savefile=res_path / f\"density_plot_final_{name}.png\", fig=fig, fit=True, figsize=(7, 4.5))"
+    "    plotting.draw_plt(\n",
+    "        savefile=res_path / f\"density_plot_final_{name}.png\",\n",
+    "        fig=fig,\n",
+    "        fit=True,\n",
+    "        figsize=(7, 4.5),\n",
+    "    )"
    ]
   }
  ],
