--- a/load_wind.ipynb
+++ b/load_wind.ipynb
@@ -87,11 +87,17 @@
    "source": [
     "# notes: wind direction is where wind is coming from, pointing in opposite direction\n",
     "# 3% of wspd added to ocean vector\n",
-    "uw_obs = -df['WSPD'].astype(float).values * np.sin(np.deg2rad(df['WDIR'].astype(float).values))\n",
-    "vw_obs = -df['WSPD'].astype(float).values * np.cos(np.deg2rad(df['WDIR'].astype(float).values))\n",
+    "uw_obs = -df[\"WSPD\"].astype(float).values * np.sin(\n",
+    "    np.deg2rad(df[\"WDIR\"].astype(float).values)\n",
+    ")\n",
+    "vw_obs = -df[\"WSPD\"].astype(float).values * np.cos(\n",
+    "    np.deg2rad(df[\"WDIR\"].astype(float).values)\n",
+    ")\n",
     "\n",
     "# the column names are different oh god why\n",
-    "timestamp = df[\"%YY\"] + \"-\" + df[\"MM\"] + \"-\" + df[\"DD\"] + \"T\" + df[\"hh\"] + \":\" + df[\"mm\"]\n",
+    "timestamp = (\n",
+    "    df[\"%YY\"] + \"-\" + df[\"MM\"] + \"-\" + df[\"DD\"] + \"T\" + df[\"hh\"] + \":\" + df[\"mm\"]\n",
+    ")\n",
     "timestamp = pd.to_datetime(timestamp)\n",
     "\n",
     "new_df = pd.DataFrame({\"time\": timestamp, \"u\": uw_obs, \"v\": vw_obs})\n",
@@ -148,7 +154,7 @@
    "outputs": [],
    "source": [
     "winds = loadmat(infile)\n",
-    "converted = [datetime.datetime.strptime(t, '%m-%d-%Y %H:%M') for t in winds[\"time_str\"]]\n",
+    "converted = [datetime.datetime.strptime(t, \"%m-%d-%Y %H:%M\") for t in winds[\"time_str\"]]\n",
     "times = np.array(converted, dtype=np.datetime64)\n",
     "u = xr.DataArray(winds[\"u\"].squeeze(), coords={\"time\": times})\n",
     "v = xr.DataArray(winds[\"v\"].squeeze(), coords={\"time\": times})\n",
