Allow uncolored vector field, fix degree conversions, add running timeseries avg

--- a/plot_current_timeseries.ipynb
+++ b/plot_current_timeseries.ipynb
@@ -19,6 +19,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "from scipy.ndimage import uniform_filter1d\n",
     "\n",
     "from pyplume import plotting, utils\n",
     "from pyplume.dataloaders import SurfaceGrid, DataLoader"
@@ -81,15 +82,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g.dataset[\"lat\"][1].values.item()"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -107,7 +100,12 @@
    "outputs": [],
    "source": [
     "fig, axs = plt.subplots(2, 1)\n",
-    "fig.set_size_inches(6, 7)\n",
+    "fig.set_size_inches(7.5, 7)\n",
+    "# hack to cycle the default line colors forward\n",
+    "num_col_skip = 2\n",
+    "for _ in range(num_col_skip):\n",
+    "    axs[0].plot([], [])\n",
+    "    axs[1].plot([], [])\n",
     "for k, g in grids.items():\n",
     "    idx = g.get_closest_index(t=None, lat=pos[0], lon=pos[1])\n",
     "    print(\n",
@@ -118,6 +116,10 @@
     "    )\n",
     "    axs[0].plot(sliced[\"time\"], sliced[\"U\"], label=k)\n",
     "    axs[1].plot(sliced[\"time\"], sliced[\"V\"], label=k)\n",
+    "    # 36 hour running average specifically for NY HFRNet readings\n",
+    "    if k == \"New York/Jersey HFRNet\":\n",
+    "        axs[0].plot(sliced[\"time\"], uniform_filter1d(sliced[\"U\"], size=12, mode=\"nearest\", origin=5), \"--\", label=f\"{k} 12 hr avg\")\n",
+    "        axs[1].plot(sliced[\"time\"], uniform_filter1d(sliced[\"V\"], size=12, mode=\"nearest\", origin=5), \"--\", label=f\"{k} 12 hr avg\")\n",
     "for ax in axs:\n",
     "    ax.grid()\n",
     "    ax.legend()\n",
@@ -150,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4,
   "vscode": {
