--- a/fieldset_compare.ipynb
+++ b/fieldset_compare.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,7 +49,7 @@
     "\n",
     "import pyplume.utils as utils\n",
     "from pyplume.dataloaders import DataLoader, dataset_to_fieldset\n",
-    "from pyplume.plotting import get_carree_axis, get_carree_gl, plot_vectorfield\n",
+    "from pyplume.plotting import get_carree_axis, get_carree_gl, plot_vectorfield, carree_subplots\n",
     "from pyplume.constants import FIELD_NETCDF_DIR"
    ]
   },
@@ -76,6 +77,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -162,6 +164,7 @@
     "    for i, time in enumerate(overlap_times):\n",
     "        vec_diff_dir = utils.get_dir(\"results/fs_comp_vectors\")\n",
     "        fig = plt.figure()\n",
+    "        fig, (ax1, ax2) = carree_subplots((1, 2), domain=domain)\n",
     "        fig.patch.set_facecolor(\"w\")\n",
     "        fig.set_size_inches(12, 5)\n",
     "        fig.tight_layout()\n",
@@ -170,8 +173,7 @@
     "            show_time=time,\n",
     "            vmin=0,\n",
     "            vmax=1,\n",
-    "            fig=fig,\n",
-    "            pos=121,\n",
+    "            ax=ax1,\n",
     "            titlestr=\"Thredds\",\n",
     "        )\n",
     "        plot_vectorfield(\n",
@@ -179,8 +181,7 @@
     "            show_time=time,\n",
     "            vmin=0,\n",
     "            vmax=1,\n",
-    "            fig=fig,\n",
-    "            pos=122,\n",
+    "            ax=ax2,\n",
     "            titlestr=\"OI\",\n",
     "        )\n",
     "        strtime = str(time.astype(\"datetime64[s]\")).replace(\":\", \"-\")\n",
@@ -235,6 +236,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -256,6 +258,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
