--- a/simulation_runner.ipynb
+++ b/simulation_runner.ipynb
@@ -49,8 +49,8 @@
    "source": [
     "configs = [\n",
     "    # \"huntington_all.yaml\",\n",
-    "    # \"ny_hurrhenri.yaml\",\n",
-    "    \"tijuana_hurrkay.yaml\",\n",
+    "    \"ny_hurrhenri.yaml\",\n",
+    "    # \"tijuana_hurrkay.yaml\",\n",
     "    # \"palau-sarop-2023-03.yaml\",\n",
     "    # \"tijuana_example.yaml\",\n",
     "]"
