Change vector plot title params

--- a/compare_densities.ipynb
+++ b/compare_densities.ipynb
@@ -137,7 +137,7 @@
     "    ).T\n",
     "    lats, lons = results[name].get_positions_time(t, query=\"before\")\n",
     "    fig, ax = plotting.carree_subplots((1, 1), domain=domain, land=True)\n",
-    "    plotting.plot_vectorfield(fields[name], show_time=\"average\", ax=ax, color_speed=False)\n",
+    "    # plotting.plot_vectorfield(fields[name], show_time=\"average\", ax=ax, color_speed=False)\n",
     "    plotting.plot_particle_density(\n",
     "        lats,\n",
     "        lons,\n",
@@ -146,6 +146,7 @@
     "        pmax=0.76,\n",
     "        title=f\"{name} cumulative density at\\n{t.astype('datetime64[s]')}\",\n",
     "    )\n",
+    "    # plotting.plot_vectorfield(fields[name], show_time=\"average\", ax=ax, color_speed=False, titlestr=False)\n",
     "    # plotting.plot_coastline(coast_lats, coast_lons, ax=ax, c=\"k\")\n",
     "    ax.scatter(starts[1], starts[0], marker=\"x\", c=\"r\")\n",
     "    plotting.draw_plt(\n",
